<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AddQuestionActivity"
    tools:showIn="@layout/activity_add_question">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/correct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/question"
            android:hint="@string/correctHint"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/incorrect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/correct"
            android:hint="@string/incorrectHint"/>
        <EditText
            android:id="@+id/incorrectA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/incorrect"
            android:hint="@string/incorrectHintA"/>
        <EditText
            android:id="@+id/incorrectB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/incorrectA"
            android:hint="@string/incorrectHintB"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/vraagHint"/>


        <Spinner
            android:id="@+id/DifficultySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/DifText"/>


        <Spinner
            android:id="@+id/CategorieSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/CatText"/>


        <TextView
            android:id="@+id/CatText"
            android:layout_below="@id/DifficultySpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CatInfo"
            android:textSize="50px" />

        <TextView
            android:id="@+id/DifText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/incorrectB"
            android:text="@string/Difficulty"
            android:textSize="50px" />

        <Button
            style="@style/bottomRight"
            android:onClick="save"
            android:text="@string/ResultButton" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>