<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".QuizSettingsActivity"
    tools:showIn="@layout/activity_quiz_settings">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:onClick="startQuiz"
            android:text="@string/startQuiz"
            style="@style/bottomRight" />

        <Spinner
            android:id="@+id/CategorieSpinner"
            style="@style/Spinner"
            android:layout_below="@id/CatText"/>

        <Spinner
            android:id="@+id/AmountSpinner"
            style="@style/Spinner"
            android:layout_below="@id/AmountText"/>

        <Spinner
            android:id="@+id/DifficultySpinner"
            style="@style/Spinner"
            android:layout_below="@id/DifText" />

        <TextView
            android:id="@+id/AmountText"
            android:layout_below="@id/CategorieSpinner"
            android:text="@string/AmInfo"
            style="@style/Setting" />

        <TextView
            android:id="@+id/CatText"
            style="@style/Setting"
            android:text="@string/CatInfo"
            />

        <TextView
            android:id="@+id/DifText"
            style="@style/Setting"
            android:text="@string/Difficulty"
            android:layout_below="@id/AmountSpinner"/>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>